--- a/src/pages/blog/_components/BlogPostPreview.astro
+++ b/src/pages/blog/_components/BlogPostPreview.astro
@@ -11,7 +11,7 @@ export type Props = {
       description: string;
       publishDate: Date;
       coverGradient: string;
-      coverImage?: string;
+      socialImage?: string;
     };
   };
 };
