--- a/src/components/Navbar/BlogNavbar.astro
+++ b/src/components/Navbar/BlogNavbar.astro
@@ -20,7 +20,7 @@ import ThemeSwitch from "./ThemeSwitch.astro";
       <div
         class="col-span-1 row-span-1 h-full w-full items-center justify-center font-normal dark:font-semibold text-text-800 transition-colors duration-200 space-x-10 hidden md:flex"
       >
-        <a href="/#whoami" class="hover:text-text-950">Whoami</a>
+        <a href="/#" class="hover:text-text-950">Home</a>
         <a href="/blog" class="hover:text-text-950">Blog</a>
         <a href="/#contact" class="hover:text-text-950">Contact</a>
       </div>
@@ -31,7 +31,7 @@ import ThemeSwitch from "./ThemeSwitch.astro";
       </div>
       <div class="md:hidden ml-auto">
         <CollapsibleMenu>
-          <a href="/#whoami" class="hover:text-text-950">Whoami</a>
+          <a href="/#" class="hover:text-text-950">Home</a>
           <a href="/blog" class="hover:text-text-950">Blog</a>
           <a href="/#contact" class="hover:text-text-950">Contact</a>
         </CollapsibleMenu>
