feat(view transitions): :test_tube: adding view transitions might break gsap color animation and theme

--- a/src/components/Home/Contact/SocialButtons.astro
+++ b/src/components/Home/Contact/SocialButtons.astro
@@ -12,7 +12,7 @@ import { Icon } from "astro-icon/components";
   class="mb-2 inline-block rounded bg-black px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
 >
   <span class="[&>svg]:h-5 [&>svg]:w-6">
-    <Icon name="ph:github-logo" class="text-text s-4" />
+    <Icon name="ph:github-logo" class="text-white s-4" />
   </span>
 </a>
 <!-- Linkedin -->
@@ -25,7 +25,7 @@ import { Icon } from "astro-icon/components";
   class="mb-2 inline-block rounded bg-[#0077b5] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
 >
   <span class="[&>svg]:h-5 [&>svg]:w-6">
-    <Icon name="ph:linkedin-logo" class="text-text s-4" />
+    <Icon name="ph:linkedin-logo-fill" class="text-white s-4" />
   </span>
 </a>
 
@@ -39,7 +39,7 @@ import { Icon } from "astro-icon/components";
   class="mb-2 inline-block rounded bg-black px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
 >
   <span class="[&>svg]:h-5 [&>svg]:w-6">
-    <Icon name="ph:x-logo" class="text-text s-4" />
+    <Icon name="ph:x-logo" class="text-white s-4" />
   </span>
 </a>
 
@@ -53,6 +53,6 @@ import { Icon } from "astro-icon/components";
   class="mb-2 inline-block rounded bg-primary px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
 >
   <span class="[&>svg]:h-5 [&>svg]:w-6">
-    <Icon name="ph:envelope-simple" class="text-text s-4" />
+    <Icon name="ph:envelope-simple" class="text-white s-4" />
   </span>
 </a>
