--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,13 +16,17 @@ const { bgClass = "bg-background", ...head } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class:list={["", bgClass, Astro.props.class]}>
+<html lang="en">
   <head>
     <BaseHead {...head} />
   </head>
 
   <body
-    class="flex min-h-screen max-w-screen flex-col overflow-x-hidden text-text"
+    class:list={[
+      "flex min-h-screen max-w-screen flex-col overflow-x-hidden text-text",
+      bgClass,
+      Astro.props.class,
+    ]}
   >
     <SkipLink />
     <slot name="navbar" />
