fix(home): :sparkles: blog section use now the real blogs

--- a/src/components/Home/Projects.astro
+++ b/src/components/Home/Projects.astro
@@ -20,7 +20,7 @@ const viaColor = "4519b3";
 >
   <SectionHeader class="mb-14">PROJECTS.</SectionHeader>
   <SpotlightCardsContainer
-    class="w-full flex flex-wrap justify-center items-center p-2 gap-2 sm:gap-4"
+    class="w-full flex flex-wrap justify-center items-center p-2 gap-2 sm:gap-4 lg:gap-8"
   >
     {
       projectsInfo.map((project) => {
