--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -6,7 +6,7 @@ export interface Props {
   icon: string;
   class?: string;
   iconClass?: string;
-  target?: string;
+  target?: "_blank" | "_self" | "_parent" | "_top";
 }
 
 const {
