--- a/src/components/Home/Blogs.astro
+++ b/src/components/Home/Blogs.astro
@@ -2,6 +2,25 @@
 import SectionHeader from "../SectionHeader.astro";
 import BlogCard from "./Blog/BlogCard.astro";
 import { Icon } from "astro-icon/components";
+
+import * as firstContribution from "../../content/blog/first-os-contribution.mdx";
+
+const makeBlogPost = (mdFile: any) => {
+  return {
+    data: {
+      title: mdFile.frontmatter.title,
+      cardImage: mdFile.frontmatter.cardImage,
+      coverGradient: mdFile.frontmatter.coverGradient,
+    },
+    url:
+      mdFile.url?.substring(
+        mdFile.url.indexOf("/blog"),
+        mdFile.url.indexOf(".md")
+      ) ?? "",
+  };
+};
+
+const blogPost = [makeBlogPost(firstContribution)];
 ---
 
 <!-- background 50, background 50-->
@@ -13,20 +32,15 @@ import { Icon } from "astro-icon/components";
 >
   <SectionHeader class="mb-14">BLOG.</SectionHeader>
   <div class="flex justify-center items-center flex-wrap">
-    {
-      [
+    <!--  
         "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-500 via-red-500 to-yellow-500",
         "bg-[conic-gradient(var(--tw-gradient-stops))] from-accent-500 via-secondary-500 to-primary-500",
         "bg-[conic-gradient(var(--tw-gradient-stops))] from-green-300 via-blue-500 to-purple-600",
         // "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-300 via-purple-300 to-indigo-400",
-      ].map((i) => {
-        return (
-          <BlogCard
-            title="Bee Watcher: Hives security system using Arduino"
-            imagePath="/src/assets/projects/bee-watcher-logo.png"
-            gradient={i}
-          />
-        );
+     -->
+    {
+      blogPost.map((i) => {
+        return <BlogCard data={i.data} link={i.url} />;
       })
     }
   </div>
