feat(blog-entry): :clown_face: mock for the last two blogs bee-watcher and reevolution-premiere

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -83,7 +83,9 @@ const placeholderGradient = randomFromArray(gradients);
         >
           {format(data.publishDate, "MMMM d, yyyy")}
         </time>
-        <h1 class="text-xl mb-4 mt-2 md:text-3xl lg:text-5xl sm:mb-5 sm:mt-3">
+        <h1
+          class="text-xl mb-4 mt-2 md:text-3xl lg:text-5xl sm:mb-5 sm:mt-3 text-wrap-balance"
+        >
           {data.title}
         </h1>
       </header>
