feat(blog): :sparkles: adding tag support

--- a/src/components/Home/Hero.astro
+++ b/src/components/Home/Hero.astro
@@ -13,7 +13,7 @@ const { default: MeSitting } = await import("/src/assets/me-sitting.svg?raw");
   <h2
     class="text-center text-5xl bg-gradient-to-r from-primary-400 to-accent-950 bg-clip-text text-transparent font-medium my-5 lg:hidden z-10"
   >
-    Software Developer.
+    Software Engineer.
   </h2>
   <div class="w-full max-w-md hidden lg:block">
     <Fragment set:html={MeStanding} />
